--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,14 +4,26 @@ body {
 }
 
 .header-main{
-    width: auto auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
 
+.subheading {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+
 a {
     color: aquamarine;
     font-size: 16px;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: gray;
 }
